--- a/src/pug/components/homepage/_main.pug
+++ b/src/pug/components/homepage/_main.pug
@@ -14,32 +14,23 @@ section.section#main.main
             .c-form__group-col.c-form__group-col-0
               .c-form__field.c-form__field--select
                 .c-form__select-wrap
-                  select(name="" select-js)
-                    option(value="1")!= "Pokażemy Ci co możemy z nim zrobić!"
-                    option(value="1")!= "Marka"
-                    option(value="1")!= "Marka"
-                    option(value="1")!= "Marka"
-                    option(value="1")!= "Marka"
+                  select(name="" placeholder="Pokażemy Ci co możemy z nim zrobić!" select-js)
+                    each val, idx in [1,2,3,4,5,6,1,2,3,4,5,6]
+                      option(value!= val)!= "Marka " + val
 
             .c-form__group-col.c-form__group-col-1
               .c-form__field.c-form__field--select
                 .c-form__select-wrap
-                  select(name="" select-js)
-                    option(value="1")!= "Pokażemy Ci co możemy z nim zrobić!"
-                    option(value="1")!= "Model"
-                    option(value="1")!= "Model"
-                    option(value="1")!= "Model"
-                    option(value="1")!= "Model"
+                  select(name="" placeholder="Pokażemy Ci co możemy z nim zrobić!" select-js)
+                    each val, idx in [1,2,3,4,5,6,1,2,3,4,5,6]
+                      option(value!= val)!= "Model " + val
 
             .c-form__group-col.c-form__group-col-2
               .c-form__field.c-form__field--select
                 .c-form__select-wrap
-                  select(name="" select-js)
-                    option(value="1")!= "Pokażemy Ci co możemy z nim zrobić!"
-                    option(value="1")!= "Silnik"
-                    option(value="1")!= "Silnik"
-                    option(value="1")!= "Silnik"
-                    option(value="1")!= "Silnik"
+                  select(name="" placeholder="Pokażemy Ci co możemy z nim zrobić!" select-js)
+                    each val, idx in [1,2,3,4,5,6,1,2,3,4,5,6]
+                      option(value!= val)!= "Silnik " + val
 
       .main__wrapper-right
         img(src="./img/img-car-main.png" srcset="" alt="" title="")
