--- a/src/pug/components/powercontrol/_powercontrol.pug
+++ b/src/pug/components/powercontrol/_powercontrol.pug
@@ -9,8 +9,10 @@ section.section#powercontrol.powercontrol
 
       .powercontrol__row.powercontrol__row-0
         .powercontrol__row-left
-          img.powercontrol__img.powercontrol__img--desktop(src="./img/img-powercontrol.png" srcset="./img/img-powercontrol@2x.png 2x" alt="" title="")
-          img.powercontrol__img.powercontrol__img--mobile(src="./img/img-powercontrol-mobile.png" srcset="./img/img-powercontrol-mobile@2x.png 2x" alt="" title="")
+          .powercontrol__img-wrapper
+            img.powercontrol__img.powercontrol__img--desktop(src="./img/img-powercontrol.png" srcset="./img/img-powercontrol@2x.png 2x" alt="" title="")
+            img.powercontrol__img.powercontrol__img--mobile(src="./img/img-powercontrol-mobile.png" srcset="./img/img-powercontrol-mobile@2x.png 2x" alt="" title="")
+            img.powercontrol__img.powercontrol__img--dte-desktop(src="./img/img-powercontrol-dte-desktop.png" srcset="./img/img-powercontrol-dte-desktop@2x.png 2x" alt="" title="")
 
         .powercontrol__row-right
           h1.powercontrol__title!= "PowerControl"
