--- a/src/scss/_shared/_swiper.scss
+++ b/src/scss/_shared/_swiper.scss
@@ -45,6 +45,12 @@
       padding-bottom: 50px;
 
       .swiper {
+        &-button {
+          &-prev,
+          &-next {
+            top: 20%;
+          }
+        }
         &-slide {
           display: flex;
           align-items: center;
