--- a/src/scss/_components/search/_base.scss
+++ b/src/scss/_components/search/_base.scss
@@ -39,6 +39,13 @@
         padding-bottom: 20px;
       }
     }
+
+    &-4 {
+      width: 100%;
+      max-width: 1070px;
+      margin-left: auto;
+      margin-right: auto;
+    }
   }
 
   &__pagination {
