--- a/src/scss/_components/powercontrol/_powercontrol.scss
+++ b/src/scss/_components/powercontrol/_powercontrol.scss
@@ -73,6 +73,9 @@
         max-width: 252px;
         margin-left: auto;
       }
+      @include respond(max-small) {
+        padding-bottom: 8px;
+      }
     }
 
     &--desktop {
@@ -121,7 +124,7 @@
     @include fluid(font-size, 320px, 1440px, 36px, 48px);
 
     + .powercontrol__text {
-      font-size: 18px !important;
+      font-size: 16px !important;
     }
   }
 
@@ -129,7 +132,7 @@
     width: 100%;
     max-width: 630px;
     color: $c-white;
-    line-height: line-height-convert(30, 18);
+    line-height: line-height-convert(30, 20);
     @include fluid(font-size, 320px, 1440px, 14px, 18px);
     @include respond(max-small) {
       margin-left: auto;
